[gd_scene load_steps=5 format=2]

[ext_resource path="res://main/Main.gd" type="Script" id=1]
[ext_resource path="res://board/Board.tscn" type="PackedScene" id=2]
[ext_resource path="res://players/white_player/WhitePlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://players/black_player/BlackPlayer.tscn" type="PackedScene" id=4]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Board" parent="." instance=ExtResource( 2 )]
position = Vector2( 79.0684, 79.4945 )

[node name="WhitePlayer" parent="." instance=ExtResource( 3 )]

[node name="BlackPlayer" parent="." instance=ExtResource( 4 )]

[connection signal="clicked_tile" from="Board" to="." method="_on_Board_clicked_tile"]
